--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,23 @@
+#header_wrap .inner {
+    padding: 20px 10px 20px 10px;
+}
+
 nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
 a {
     text-decoration: none;
     color: #ccc;
 }
+
 a:hover {
     text-decoration: underline;
 }
