--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+          <h1 id="project_title"><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
 
           {% if site.show_downloads %}
             <section id="downloads">
@@ -32,9 +32,8 @@
           
           <nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+		        	<li><a href="/blog">Blog</a></li>
+				<li><a href="/about">Contact</a></li>
 	    		</ul>
 			</nav>
         </header>
@@ -48,10 +47,10 @@
     </div>
 
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
+    <!--<div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Intellidev IT Consultancy LTD</p>
       </footer>
-    </div>
+    </div>-->
   </body>
 </html>
