--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           <nav>
 	    		<ul>
 		        	<li><a href="/blog">Blog</a></li>
-				<li><a href="/about">Contact</a></li>
+				<li><a href="/contact">Contact</a></li>
 	    		</ul>
 			</nav>
         </header>
