--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,10 +48,10 @@
     </div>
 
     <!-- FOOTER  -->
-    <!--<div id="footer_wrap" class="outer">
+    <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Intellidev IT Consultancy LTD</p>
       </footer>
-    </div>-->
+    </div>
   </body>
 </html>
