--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Intellidev IT Consultancy LTD</p>
+        <p class="copyright"><i class="fa-solid fa-copyright"></i> Intellidev IT Consultancy LTD</p>
       </footer>
     </div>
   </body>
