--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" type="text/css" href="{{ '/css/main.css?v=' | append: site.github.build_revision | relative_url }}">
-	  <link rel="stylesheet" type="text/css" href="{{ '/css/fontawesome.min.css?v=' | append: site.github.build_revision | relative_url }}">
+	  <link rel="stylesheet" type="text/css" href="{{ 'assets/fontawesome/css/all.min.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="google-site-verification" content="svyJqz8mzoLjqu1jVCG5_MbJWFle64fqM8CxjbluJjk" />
 	  
 {% seo %}
